<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetailActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:hint="@string/nombre"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:hint="@string/descripcion"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="match_parent"
        android:hint="@string/precio"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvMarca"
        android:layout_width="match_parent"
        android:hint="@string/marca"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegresar"
            android:text="@string/regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="eliminarProductoOnClick"
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>